--- a/.github/workflows/Dwapi-Queries.js.yml
+++ b/.github/workflows/Dwapi-Queries.js.yml
@@ -26,14 +26,18 @@ jobs:
           MYSQL_DB: openmrs
           MYSQL_USER: root
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_PASSWORD: test123
+          MYSQL_ROOT_PASSWORD: test123
         ports:
           - "3306:3306"
 
     steps:
     - uses: actions/checkout@v2
+    - name: Verify MySQL connection from host
+      run: |
+        sudo apt-get install -y mysql-client
+        mysql --host 127.0.0.1 --port 3306 -uroot -ptest123 -e "SHOW DATABASES"
     - name: load database
-      run: mysql -uroot -h127.0.0.1 -ptest123 < ./openmrs.sql
+      run: mysql -uroot --host 127.0.0.1 -ptest123 < ./openmrs.sql
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
