--- a/.github/workflows/Dwapi-Queries.js.yml
+++ b/.github/workflows/Dwapi-Queries.js.yml
@@ -22,27 +22,41 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_HOST: 127.0.0.1
-          MYSQL_DB: openmrs
-          MYSQL_USER: root
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          
           MYSQL_ROOT_PASSWORD: test123
+          MYSQL_DATABASE: test
+          MYSQL_ALLOW_EMPTY_PASSWORD: no
+          MYSQL_USER: admin
+          MYSQL_PASSWORD: test123
+          
         ports:
           - "3306:3306"
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Verify MySQL connection from host
+    
       run: |
-        sudo apt-get install -y mysql-client
-        mysql --host 127.0.0.1 --port 3306 -uroot -ptest123 -e "SHOW DATABASES"
+        sudo apt-get update && sudo apt-get install -y mysql-client
+        
+        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e 'SHOW DATABASES'
+        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e "select @@hostname"
     - name: load database
-      run: mysql -uroot --host 127.0.0.1 -ptest123 < ./openmrs.sql
+      run: mysql --protocol=tcp  -h localhost -P 3306 -u root -ptest123 < ./openmrs.sql
+    - name: Check the DATABASES
+      run: |
+        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e 'SHOW DATABASES'
+        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e "SET GLOBAL sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));"
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run cypress:open
+    - name: Cypress run
+      uses: cypress-io/github-action@v2
+      with:
+          build: npm run build --if-present
+          start: npm run cypress:open
+    
