changes on the push and pull request for the git workflow

--- a/.github/workflows/sqlCheck.yml
+++ b/.github/workflows/sqlCheck.yml
@@ -1,5 +1,9 @@
-name: sqlcheck workflow2
-on: pull_request
+name: sqlcheck workflow
+on:
+ push:
+    branches: [ master ]
+ pull_request:
+    branches: [ master ]
 
 jobs:
   sqlcheck:
