--- a/.github/workflows/Dwapi-Queries.js.yml
+++ b/.github/workflows/Dwapi-Queries.js.yml
@@ -1,18 +1,16 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-
 name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,42 +21,37 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          
           MYSQL_ROOT_PASSWORD: test123
           MYSQL_DATABASE: test
           MYSQL_ALLOW_EMPTY_PASSWORD: no
           MYSQL_USER: admin
           MYSQL_PASSWORD: test123
-          
+
         ports:
           - "3306:3306"
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Verify MySQL connection from host
-    
-      run: |
-        sudo apt-get update && sudo apt-get install -y mysql-client
-        
-        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e 'SHOW DATABASES'
-        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e "select @@hostname"
-    - name: load database
-      run: mysql --protocol=tcp  -h localhost -P 3306 -u root -ptest123 < ./openmrs.sql
-    - name: Check the DATABASES
-      run: |
-        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e 'SHOW DATABASES'
-        mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e "SET GLOBAL sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));"
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: Cypress run
-      uses: cypress-io/github-action@v2
-      with:
+      - name: Verify MySQL connection from host
+
+        run: |
+          mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e 'SHOW DATABASES'
+          mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e "select @@hostname"
+      - name: load database
+        run: mysql --protocol=tcp  -h localhost -P 3306 -u root -ptest123 < ./openmrs.sql
+      - name: Check the DATABASES
+        run: |
+          mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e 'SHOW DATABASES'
+          mysql --protocol=tcp -h localhost -P 3306 -u root -ptest123 -e "SET GLOBAL sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));"
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
           build: npm run build --if-present
           start: npm run cypress:open
-
-    
