--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,13 @@
 *.tar.gz
 *.rar
 
+#idea files#
+*.idea/dataSources.local.xml
+*.idea/workspace.xml
+*.idea/dataSources/840c7380-087e-4516-9842-d0c737c7d1fd/storage.xml
+*.idea/dataSources/b3624724-d32a-4263-976c-989c1232da56/storage.xml
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /node_modules
